# casper-eip-712

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  project-rules.md
.github/workflows/: publish-npm.yaml
blog-drafts/: task-327-eip712-blog-devto.md  task-327-eip712-blog-medium.md  task-327-eip712-blog.md  task-327-image-specs.md  task-327-x-announcements.md
docs/: proposal-casper-native-permits.md
docs/superpowers/plans/: 2026-04-14-publish-npm-workflow.md  task-327-plan.md
examples/csprclick-signing/: README.md
examples/permit-token/: Cargo.toml  Odra.toml  README.md  rust-toolchain.toml
examples/permit-token/demo/: demo.ts  package-lock.json  package.json  tsconfig.json
examples/permit-token/src/: lib.rs  permit_token.rs
examples/permit-token/tests/: integration.rs
examples/viem-signing/: README.md  demo.ts  package-lock.json  package.json
go/: CHANGELOG.md  README.md  doc.go  domain_test.go
js/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
js/src/: domain.ts  encoding.ts  hash.ts  index.ts  keccak.ts  type-hash.ts  type-string.ts  types.ts  utils.ts  verify.ts
js/src/prebuilt/: approval.ts  index.ts  permit.ts  transfer.ts
js/tests/: cross-language.test.ts  domain.test.ts  encoding.test.ts  hash.test.ts  keccak.test.ts  type-hash.test.ts
scripts/: generate-vectors.ts  package.json
src/: domain.rs  hash.rs  lib.rs  prelude.rs  traits.rs  type_hash.rs
tests/: cross_language.rs  vectors.json
